# icedrift

./: .gitignore  README.md  __init__.py  drifter.yml  icedrift.yml  pyproject.toml
.github/workflows/: python-package.yml
data/: error_estimate_cubic_splines.csv  test_Lsite_strainrates.csv  test_speed.csv
data/interp_mosaic_buoys/: L1_300234068704730_2019T67.csv  L2_300234068705730_2019T65.csv  L3_300234066081170_2019S94.csv
data/mosaic_buoys/: L2_300025060015720_2019R9.csv  L2_300434063384820_2019I2.csv  L3_300025060016600_2019F3.csv  M1_300234065725000_2019S84.csv  M2_300234068160720_2019O2.csv  M8_300234068700320_2019T69.csv  P002_300234068916790_2019P204.csv  P008_300234065981590_2019P142.csv  P028_300234068129990_2019P192.csv
data/mosaic_interpolated/: CO1_300025010644540_2020M29.csv  CO1_300025060016190_2019F4.csv  CO1_300025060612750_2020R10.csv  CO1_300234010303850_2020P212.csv  CO1_300234010303850_2020P228.csv  CO1_300234062321110_2020E2.csv  CO1_300234064132630_2020E1.csv  CO1_300234065768480_2020T61.csv  CO1_300234066083130_2020S97.csv  CO1_300234068118580_2019P161.csv  CO1_300234068118580_2020P226.csv  CO1_300234068210190_2019P153.csv  CO1_300234068210190_2020P227.csv  CO1_300234068210310_2020P225.csv  CO1_300234068325170_2020T75.csv  CO1_300234068527600_2020T79.csv  CO1_ASFS30UCB_ASFS30UCB2.csv  CO1_ASFS50UCB_ASFS50UCB2.csv  CO1_ASFSTUCB_ASFSTUCB1.csv  CO2_300025010649550_2020M26.csv  CO2_300025060102020_2020M27.csv  CO2_ASFS50UCB_ASFS50UCB3.csv  (+176 more)
notebooks/: Building data table.ipynb  Buoy processing for dispersion paper.ipynb  Buoy processing pipeline.ipynb  Calculating deformation.ipynb  Comparison with N-ICE2015.ipynb  Creating QC dataset at minimum 30 min sampling interval.ipynb  Error estimation.ipynb  Loess smoothing.ipynb  Making a model for anomaly detection.ipynb  Preparing the other buoy datasets.ipynb  Processing the MOSAiC data.ipynb  QC for hourly buoy dataset.ipynb  Testing and development.ipynb  Tests.ipynb
processing_scripts/: download_iabp.py  process_cirfa-2022.py  process_mosaic.py  process_n-ice2015.py
sample/: MOSAiC_processing_v1.py  MOSAiC_processing_v2.py  MOSAiC_processing_v3.py  mosaic_interpolated_v2.py
src/: __init__.py  analysis.py  cleaning.py  interpolation.py
tests/: basic_functions.py  run_tests.py  test_check_dates.py  test_check_positions.py  test_duplicates.csv  training_data_mosaic.csv
utilities/: analysis.py  cleaning.py  interpolation.py
(+202 files in other folders)
